volunteering section lol

--- a/src/components/BodyText/BodyText.scss
+++ b/src/components/BodyText/BodyText.scss
@@ -16,4 +16,14 @@
     span{
         font-weight: $weight-bold;
     }
+    @media (max-width: 767px) {
+        padding-left: $spacing-2rem;
+        padding-right: $spacing-2rem;
+        .heading-text-h1 {
+            font-size: $font-size-25;
+        }
+        p{
+            font-size: 1;
+        }
+    }
 }
