--- a/src/components/HomeHeader/HomeHeader.scss
+++ b/src/components/HomeHeader/HomeHeader.scss
@@ -3,8 +3,10 @@
 .home-header-guide {
     background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(24, 0, 0, 0.451389) 77.43%, #340000 100%), linear-gradient(0deg, #570B0B, #570B0B);
     width: 100%;
+    justify-content: center;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 .home-header-container {
     display: flex;
