--- a/src/components/FacebookWidget/FacebookWidget.scss
+++ b/src/components/FacebookWidget/FacebookWidget.scss
@@ -14,5 +14,7 @@
         border-radius: 20px; /* roundness of the scroll thumb */
         border: transparent; /* creates padding around scroll thumb */
     }
-
+    @media (max-width: 767px) {
+        
+    }
 }
