--- a/src/components/HomeLearnMore/HomeLearnMore.scss
+++ b/src/components/HomeLearnMore/HomeLearnMore.scss
@@ -42,6 +42,7 @@
                 padding-right: $spacing-15rem;
             }
             .home-learn-more-buttom-container {
+                border-radius: 3px;
                 background-color: $color-black;
                 display: flex;
                 justify-content: center;
@@ -59,5 +60,8 @@
                 margin-top: 2px;
             }
         }
+    }
+    @media (max-width: 767px) {
+    transform: scale(.95);
     }
 }
