possible email form fix

--- a/src/components/Email/Email.scss
+++ b/src/components/Email/Email.scss
@@ -75,6 +75,7 @@
             border-style: solid;
         }
         .email-submit-button-container {
+            border: none;
             background-color: $color-primary;
             display: flex;
             justify-content: center;
