--- a/src/components/Email/Email.scss
+++ b/src/components/Email/Email.scss
@@ -89,5 +89,10 @@
             cursor: pointer;
             user-select: none;
         }
+        .email-submit-button-container.disabled {
+            opacity: 0.5; /* Make the button look faded */
+            pointer-events: none; /* Prevents any mouse interaction with the button */
+            cursor: default; /* Resets the cursor to default instead of pointer */
+        }
     }
 }
