--- a/src/components/Email/Email.scss
+++ b/src/components/Email/Email.scss
@@ -75,6 +75,7 @@
             border-style: solid;
         }
         .email-submit-button-container {
+            border: none;
             background-color: $color-primary;
             display: flex;
             justify-content: center;
@@ -87,6 +88,11 @@
             margin-top: $spacing-15rem;
             cursor: pointer;
             user-select: none;
+        }
+        .email-submit-button-container.disabled {
+            opacity: 0.5; /* Make the button look faded */
+            pointer-events: none; /* Prevents any mouse interaction with the button */
+            cursor: default; /* Resets the cursor to default instead of pointer */
         }
     }
 }
