--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -2,6 +2,7 @@
 
 $font-size-1: 1rem;
 $font-size-05: .5rem;
+$font-size-075: .75rem;
 $font-size-086: .86rem;
 $font-size-12: 1.2rem;
 $font-size-15: 1.5rem;
