--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -57,3 +57,13 @@ a {
     }
   }
 }
+
+.unity-photo {
+  width: 100%;
+  border-radius: 3px;
+}
+.unity-photo-mobile {
+  width: 80%;
+  margin-left: 1rem;
+  border-radius: 3px;
+}
