--- a/src/components/DesktopShell/DesktopShell.scss
+++ b/src/components/DesktopShell/DesktopShell.scss
@@ -26,7 +26,7 @@
         color: $color-white;
         opacity: .1;
         white-space: nowrap;
-        left: -$spacing-3rem;
+        left: $spacing-2rem;
         bottom: 6rem;
         user-select: none;
     }
@@ -34,13 +34,13 @@
     .right-container {
         z-index: 4;
         flex: 5;
-        background-color: $color-article-header-background;
+        background: linear-gradient(141deg, rgb(0, 0, 0) 0%, rgb(42, 29, 29) 100%);
         display: flex;
         flex-direction: column;
         padding-left: $spacing-2rem;
         padding-top: $spacing-3rem;
-        padding-bottom: $spacing-4rem
-        
+        padding-bottom: $spacing-4rem;
+    
     }
 
     .header-blurb-title {
