draft of desktop homepage

--- a/src/components/VolunteeringDesktop/VolunteeringDesktop.scss
+++ b/src/components/VolunteeringDesktop/VolunteeringDesktop.scss
@@ -25,6 +25,7 @@
             justify-content: center;
             align-items: center;
             width: 45%;
+            min-width:  20rem;
             height: 20rem;
             .volunteering-left-content-container {
                 width: 70%;
