--- a/src/pages/Mobile/Events/Events.scss
+++ b/src/pages/Mobile/Events/Events.scss
@@ -4,3 +4,13 @@
     justify-content: center;
     justify-self: center;
 }
+.event-contact {
+    .booking-contact-container {
+        margin-right: 0;
+    }
+}
+.h2-title {
+    .description-body-title-container {
+        font-weight: 300;
+    }
+}
