--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -60,10 +60,15 @@ a {
 
 .unity-photo {
   width: 100%;
-  border-radius: 3px;
+  border-radius: 10px;
 }
 .unity-photo-mobile {
   width: 80%;
   margin-left: 1rem;
   border-radius: 3px;
+}
+
+p {
+  font-weight: 400;
+  line-height: 1.6em;
 }
