--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -17,6 +17,12 @@
         box-shadow: $shadow-top;
     }
 
+    .left-footer-container {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: .5rem;
+    }
     .footer-navs {
         padding-top: $spacing-12rem;
         padding-bottom: $spacing-1rem;
@@ -89,8 +95,7 @@
 
     .footer-bottom-nav {
         padding-top: $spacing-1rem;
-        padding-left: $spacing-1rem;
-        padding-right: $spacing-1rem;
+        padding-right: $spacing-3rem;
     }
 
     .footer-app-logo {
@@ -135,7 +140,6 @@
             font-size: $font-size-075;
         }
         font-size: $font-size-05;
-        text-decoration: underline;
     }
 
     .footer-email-link {
@@ -143,13 +147,12 @@
             font-size: $font-size-075;
         }
         font-size: $font-size-05;
-        text-decoration: underline;
     }
 
     .footer-bottom-right-links {
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: flex-start;
         align-items: flex-start;
 
         @media (min-width: 768px) {
