--- a/src/components/HomeLearnMore/HomeLearnMore.scss
+++ b/src/components/HomeLearnMore/HomeLearnMore.scss
@@ -1,13 +1,15 @@
 @use '../../scss' as *;
 .home-learn-more-main-container {
+    padding-top: 2rem;
     display: flex;
     width: 100%;
+    height: 150%;
     justify-content: center;
     align-items: center;
     .home-learn-more-container {
         display: flex;
         flex-direction: column;
-        width: 21rem;
+        width: 21rem; 
         padding-bottom: $spacing-2rem;
         background-color: $color-white;
         box-shadow: 0px 2px 3px 1px #00000045;
