--- a/src/components/VolunteeringDesktop/VolunteeringDesktop.scss
+++ b/src/components/VolunteeringDesktop/VolunteeringDesktop.scss
@@ -19,7 +19,7 @@
 
         z-index: 99;
         border-radius: $spacing-1rem;
-        box-shadow: 2px 4px 4px 4px #00000040;
+        box-shadow: $shadow-card;
         .volunteering-left-container {
             display: flex;
             justify-content: center;
