Big fat update (#49)
* trying to add netlify compatibility

* possible email form fix

* submitted interaction

* email submission changes and styling

* adding images for long lounge & styles

* adding correct links and updating styles

* link fixes

* bottom nav link sytles

* style fixing

* event page and eventbrite fake widget, style overhall

* big update

* styling fixes

* footer fix

--- a/src/components/Email/Email.scss
+++ b/src/components/Email/Email.scss
@@ -51,6 +51,7 @@
             align-items: center;
             padding-bottom: $spacing-025rem;
             .email-label-text-container {
+                margin-top: $spacing-1rem;
                 padding-right: $spacing-025rem;
                 font-size: $font-size-12;
                 font-weight: $weight-regular;
