--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -93,8 +93,9 @@
 
         padding-left: $spacing-2rem;
         padding-right: $spacing-2rem;
-
+        
         @media (min-width: 768px) {
+            padding-left: 0;
             gap: $spacing-4rem;
             justify-content: flex-start;
         }
