--- a/src/components/HomeHeader/HomeHeaderDesktop/HomeHeaderDesktop.scss
+++ b/src/components/HomeHeader/HomeHeaderDesktop/HomeHeaderDesktop.scss
@@ -56,7 +56,7 @@
         padding-right: $spacing-4rem + $spacing-15rem;
     }
     .home-renting-button {
-        background-color: transparent!important;
+        background-color: transparent;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -68,6 +68,10 @@
         font-weight: $weight-thin;
         margin-top: $spacing-15rem;
         border: solid 1px $color-white;
+
+        &:hover {
+            background-color: rgba(63, 40, 40, 0.472);
+        }
     }
 }
 .home-header-desktop-container {
