--- a/src/pages/Mobile/Menu/Menu.scss
+++ b/src/pages/Mobile/Menu/Menu.scss
@@ -21,6 +21,7 @@
     color: $color-gray;
     font-size: $font-size-086;
     font-weight: $weight-regular;
+    margin-bottom: 2rem;
 }
 
 p .food-menu-description-subtext-container {
