--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -60,7 +60,12 @@ a {
 
 .unity-photo {
   width: 100%;
-  border-radius: 10px;
+  
+  @media (min-width: 768px) {
+    align-items: flex-start;
+    border-radius: 10px;
+}
+
 }
 .unity-photo-mobile {
   width: 80%;
